design_patterns/kubernetes/generic_app_istio/templates/destination_rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: {app_name}
  labels:
    app: {app_name}
spec:
  host: {app_name}.{namespace}.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    loadBalancer:
      simple: ROUND_ROBIN
